--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/product/g5_plus.jpg">
+                            <img class="activator" src="assets/product/3.jpg">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">Motorola G5 plus<i class="material-icons right">more_vert</i></span>
@@ -90,7 +90,7 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/product/samsung_j7.jpg">
+                            <img class="activator" src="assets/product/1.jpg">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">Samsung J7<i class="material-icons right">more_vert</i></span>
@@ -113,7 +113,7 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/product/g5_plus.jpg">
+                            <img class="activator" src="assets/product/5.jpg">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">Motorola G5 plus<i class="material-icons right">more_vert</i></span>
