--- a/productos.html
+++ b/productos.html
@@ -20,8 +20,8 @@
                 <a href="" class="brand-logo" style="margin-left: 10px">Trade Up</a>
                 <a href="" data-activates="slide-out" class="button-collapse right"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li class="nav-menu activo"><a href="#"><i class="material-icons left">home</i>Inicio</a></li>
-                    <li class="nav-menu"><a href="categorias.html"><i class="material-icons left">dashboard</i>Productos</a></li>
+                    <li class="nav-menu"><a href="index.html"><i class="material-icons left">home</i>Inicio</a></li>
+                    <li class="nav-menu activo"><a href="#"><i class="material-icons left">dashboard</i>Productos</a></li>
                     <li class="nav-menu"><a href="contacto.html"><i class="material-icons left">phone</i>Contacto</a></li>
                     <li class="nav-menu" id="side-bar" data-activates="slide-out"><a href="#"><i class="material-icons left">assignment_ind</i>Iniciar sesión</a></li>
                 </ul>
@@ -40,10 +40,9 @@
                 <a href="#!email"><span class="white-text email">dan.raudales.26@gmail.com</span></a>
             </div>
         </li>
-        <li class="nav-menu activo"><a href="#"><i class="material-icons left">home</i>Inicio</a></li><hr>
-        <li class="nav-menu"><a href="categorias.html"><i class="material-icons left">dashboard</i>Productos</a></li><hr>
-        <li class="nav-menu"><a href="contacto.html"><i class="material-icons left">phone</i>Contacto</a></li><hr>
-        <li class="nav-menu" id="side-bar" data-activates="slide-out"><a href="#"><i class="material-icons left">assignment_ind</i>Iniciar sesión</a></li><hr>
+        <li><a class="waves-effect" href="index.html"><i class="material-icons left">home</i>Inicio</a></li><hr>
+        <li class="activo"><a class="waves-effect" href="#"><i class="material-icons left">dashboard</i>Productos</a></li><hr>
+        <li><a class="waves-effect" href="contacto.html"><i class="material-icons left">phone</i>Contacto</a></li><hr>
         <li><a class="waves-effect" href="#!"><i class="material-icons">mode_edit</i>Editar perfil</a></li><hr>        
         <li><a class="waves-effect" href="#!"><i class="material-icons">local_offer</i>Mis productos</a></li><hr>        
         <li><a class="waves-effect" href="#!"><i class="material-icons">local_grocery_store</i>Carrito de compras</a></li><hr>
@@ -53,26 +52,22 @@
 
     <!--Body-->
     <div class="contenedor z-depth-1">
-        <div class="carousel carousel-slider" data-indicators="true">
-            <a class="carousel-item" href="#one!"><img src="assets/img/1.png"></a>
-            <a class="carousel-item" href="#two!"><img src="assets/img/2.jpg"></a>
-            <a class="carousel-item" href="#three!"><img src="assets/img/3.png"></a>
-            <a class="carousel-item" href="#four!"><img src="assets/img/3.jpg"></a>
-        </div>
         <div class="contenedor2">
             <!-- New products-->
-            <h4 class="center">Nuevos productos</h4>
+            <br>
+            <h3 class="center">Nuestros productos</h3><br>
             <div class="divider"></div>
+
             <div class="row" style="margin-top: 15px">
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/product/g5_plus.jpg">
+                            <img class="activator" src="assets/product/3.jpg">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">Motorola G5 plus<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#" id="add-item" precio="4999" item="Moto G5 Plus">Añadir al carrito</a></p>
-                            <p>$ 4,999</p>
+                            <p><a href="#" id="add-item" precio="5499" item="Moto G5 Plus">Añadir al carrito</a></p>
+                            <p>$ 5499</p>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Moto G5 Plus<i class="material-icons right">close</i></span>
@@ -84,13 +79,13 @@
                                OS: Android 7.0 <br>
                                Perfil: 7.7 mm <br>
                                Peso: 155 g</p>
-                            </div>
                         </div>
+                    </div>
                 </div>
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/product/g5_plus.jpg">
+                            <img class="activator" src="assets/product/1.jpg">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">Motorola G5 plus<i class="material-icons right">more_vert</i></span>
@@ -113,7 +108,7 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/product/g5_plus.jpg">
+                            <img class="activator" src="assets/product/5.jpg">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">Motorola G5 plus<i class="material-icons right">more_vert</i></span>
@@ -130,24 +125,154 @@
                                OS: Android 7.0 <br>
                                Perfil: 7.7 mm <br>
                                Peso: 155 g</p>
-                            </div>
                         </div>
                     </div>
-                </div>                
-            <!-- About Trade Up -->
-            <h4>¿Qué es Trade Up?</h4>
-            <div class="divider"></div>
-            <div class="row">
-                <div class="col s4"><br>
-                    <img src="assets/img/trade.png" class="responsive-img">
-                </div>
-                <div class="col s8"><br>
-                    <h5>Acerca de Trade Up</h5>
-                    <p class="flow-text">
-                        Es una de las ...
-                    </p>
                 </div>
             </div>
+
+            <div class="row" style="margin-top: 15px">
+                <div class="col s12 m4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/product/8.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Motorola G5 plus<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">Añadir al carrito</a></p>
+                            <p>$ 4,999</p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Moto G5 Plus<i class="material-icons right">close</i></span>
+                            <p>Pantalla 5.2", 1080 x 1920 pixels <br>
+                               Procesador Snapdragon 625 2GHz <br>
+                               2GB/3GB/4GB RAM <br>
+                               32GB/64GB, microSD <br>
+                               Cámara: 12 MP <br>
+                               OS: Android 7.0 <br>
+                               Perfil: 7.7 mm <br>
+                               Peso: 155 g</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/product/7.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Motorola G5 plus<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">Añadir al carrito</a></p>
+                            <p>$ 4,999</p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Moto G5 Plus<i class="material-icons right">close</i></span>
+                            <p>Pantalla 5.2", 1080 x 1920 pixels <br>
+                               Procesador Snapdragon 625 2GHz <br>
+                               2GB/3GB/4GB RAM <br>
+                               32GB/64GB, microSD <br>
+                               Cámara: 12 MP <br>
+                               OS: Android 7.0 <br>
+                               Perfil: 7.7 mm <br>
+                               Peso: 155 g</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/product/6.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Motorola G5 plus<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">Añadir al carrito</a></p>
+                            <p>$ 4,999</p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Moto G5 Plus<i class="material-icons right">close</i></span>
+                            <p>Pantalla 5.2", 1080 x 1920 pixels <br>
+                               Procesador Snapdragon 625 2GHz <br>
+                               2GB/3GB/4GB RAM <br>
+                               32GB/64GB, microSD <br>
+                               Cámara: 12 MP <br>
+                               OS: Android 7.0 <br>
+                               Perfil: 7.7 mm <br>
+                               Peso: 155 g</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row" style="margin-top: 15px">
+                <div class="col s12 m4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/product/2.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Motorola G5 plus<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">Añadir al carrito</a></p>
+                            <p>$ 4,999</p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Moto G5 Plus<i class="material-icons right">close</i></span>
+                            <p>Pantalla 5.2", 1080 x 1920 pixels <br>
+                               Procesador Snapdragon 625 2GHz <br>
+                               2GB/3GB/4GB RAM <br>
+                               32GB/64GB, microSD <br>
+                               Cámara: 12 MP <br>
+                               OS: Android 7.0 <br>
+                               Perfil: 7.7 mm <br>
+                               Peso: 155 g</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/product/9.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Motorola G5 plus<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">Añadir al carrito</a></p>
+                            <p>$ 4,999</p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Moto G5 Plus<i class="material-icons right">close</i></span>
+                            <p>Pantalla 5.2", 1080 x 1920 pixels <br>
+                               Procesador Snapdragon 625 2GHz <br>
+                               2GB/3GB/4GB RAM <br>
+                               32GB/64GB, microSD <br>
+                               Cámara: 12 MP <br>
+                               OS: Android 7.0 <br>
+                               Perfil: 7.7 mm <br>
+                               Peso: 155 g</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/product/4.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Motorola G5 plus<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">Añadir al carrito</a></p>
+                            <p>$ 4,999</p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Moto G5 Plus<i class="material-icons right">close</i></span>
+                            <p>Pantalla 5.2", 1080 x 1920 pixels <br>
+                               Procesador Snapdragon 625 2GHz <br>
+                               2GB/3GB/4GB RAM <br>
+                               32GB/64GB, microSD <br>
+                               Cámara: 12 MP <br>
+                               OS: Android 7.0 <br>
+                               Perfil: 7.7 mm <br>
+                               Peso: 155 g</p>
+                        </div>
+                    </div>
+                </div>
+            </div>                
         </div>
     </div>
         <!-- Footer -->
